--- a/oshealthrec-website/public/doktor/mitarbeiter.html
+++ b/oshealthrec-website/public/doktor/mitarbeiter.html
@@ -95,21 +95,12 @@
             window.location.href = "../index.html";
         }
 
-        // Hole Profil Daten des Doktors aus der Blockchain, falls sie nicht im Session Storage gespeichert sind.
-        if (sessionStorage.getItem("doktorProfil") == null) {
-            // Hole Profil Daten des Nutzers aus der Blockchain
-            const response = await fetch(serverIp + "/api/org.oshealthrec.network.Doctor/" + participantId, {
-                method: 'GET',
-                credentials: 'include'
-            });
-            let profilJson = await response.json();
-
-            // Speichere Profil Daten im SessionStorage
-            let doktorProfil = JSON.stringify(profilJson);
-            sessionStorage.setItem("doktorProfil", doktorProfil);
-        }
-        // Hole Doktor Profil aus dem SessionStorage
-        let doktorProfil = JSON.parse(sessionStorage.getItem("doktorProfil"));
+        // Hole Profil Daten des Nutzers aus der Blockchain
+        const response = await fetch(serverIp + "/api/org.oshealthrec.network.Doctor/" + participantId, {
+            method: 'GET',
+            credentials: 'include'
+        });
+        let doktorProfil = await response.json();
 
         // Hole MitarbeiterIDs des Doktors
         let employeeArray = doktorProfil.employees;
