--- a/oshealthrec-website/public/mitarbeiter/profil.html
+++ b/oshealthrec-website/public/mitarbeiter/profil.html
@@ -83,22 +83,12 @@
             window.location.href = "../index.html";
         }
 
-        // Hole Profil Daten des Mitarbeiters aus der Blockchain, falls sie nicht im Session Storage gespeichert sind.
-        if (sessionStorage.getItem("mitarbeiterProfil") == null) {
-            // Hole Profil Daten des Nutzers aus der Blockchain
-            const response = await fetch(serverIp + "/api/org.oshealthrec.network.Employee/" + participantId, {
-                method: 'GET',
-                credentials: 'include'
-            });
-            let profilJson = await response.json();
-
-            // Speichere Profil Daten im SessionStorage
-            let mitarbeiterProfil = JSON.stringify(profilJson);
-            sessionStorage.setItem("mitarbeiterProfil", mitarbeiterProfil);
-        }
-
-        // Hole Mitarbeiter Profil aus dem SessionStorage
-        let mitarbeiterProfil = JSON.parse(sessionStorage.getItem("mitarbeiterProfil"));
+        // Hole Profil Daten des Nutzers aus der Blockchain
+        const response = await fetch(serverIp + "/api/org.oshealthrec.network.Employee/" + participantId, {
+            method: 'GET',
+            credentials: 'include'
+        });
+        let mitarbeiterProfil = await response.json();
 
         // Hole Textfelder als jquery Variable
         let vorname = $('#vorname');
