--- a/oshealthrec-website/public/qr-test.html
+++ b/oshealthrec-website/public/qr-test.html
@@ -7,12 +7,16 @@
 <body>
     <div id="reader" style="width:300px;height:250px;">
     </div>
+    <button onclick="readQrCode()">Read Code</button>
     <div id="display"></div>
 
     <script type="text/javascript">
-        $('#reader').html5_qrcode(function (data) {
-            $('#display').text(data.toString());
-        })
+        function readQrCode() {
+            $('#reader').html5_qrcode(function (data) {
+                $('#display').text(data.toString());
+            });
+        }
+
     </script>
 
     <!-- jQuery first, then Popper.js, then Bootstrap JS -->
