--- a/oshealthrec-website/public/qr-test.html
+++ b/oshealthrec-website/public/qr-test.html
@@ -32,6 +32,6 @@
 
     <script type="text/javascript" src="js/html5-qrcode.min.js"></script>
     <script type="text/javascript" src="js/jsqrcode-combined.min.js"></script>
-    <script src="https://webrtc.github.io/adapter/adapter-latest.js"></script>
+<!--    <script src="https://webrtc.github.io/adapter/adapter-latest.js"></script>-->
 </body>
 </html>
