--- a/oshealthrec-website/public/qr-test.html
+++ b/oshealthrec-website/public/qr-test.html
@@ -30,7 +30,7 @@
     <script src="https://cdnjs.cloudflare.com/ajax/libs/popper.js/1.14.7/umd/popper.min.js" crossorigin="anonymous"></script>
     <script src="https://stackpath.bootstrapcdn.com/bootstrap/4.3.1/js/bootstrap.min.js" crossorigin="anonymous"></script>
 
-    <script src="https://webrtc.github.io/adapter/adapter-latest.js"></script>
+<!--    <script src="https://webrtc.github.io/adapter/adapter-latest.js"></script>-->
     <script type="text/javascript" src="js/html5-qrcode.min.js"></script>
     <script type="text/javascript" src="js/jsqrcode-combined.min.js"></script>
 
