--- a/oshealthrec-website/public/qr-test.html
+++ b/oshealthrec-website/public/qr-test.html
@@ -11,6 +11,7 @@
     <div id="display"></div>
 
     <script type="text/javascript">
+        import adapter from 'webrtc-adapter';
         function readQrCode() {
             $('#reader').html5_qrcode(function (data) {
                 $('#display').text(data.toString());
