--- a/oshealthrec-website/public/qr-test.html
+++ b/oshealthrec-website/public/qr-test.html
@@ -3,6 +3,9 @@
 <head>
     <meta charset="UTF-8">
     <title>QR-Test</title>
+    <script type="module">
+        import adapter from 'webrtc-adapter';
+    </script>
 </head>
 <body>
     <div id="reader" style="width:300px;height:250px;">
@@ -11,7 +14,6 @@
     <div id="display"></div>
 
     <script type="text/javascript">
-        import adapter from 'webrtc-adapter';
         function readQrCode() {
             $('#reader').html5_qrcode(function (data) {
                 $('#display').text(data.toString());
