Test vom Einlesen eines QR-Codes

--- a/oshealthrec-website/public/qr-test.html
+++ b/oshealthrec-website/public/qr-test.html
@@ -3,9 +3,9 @@
 <head>
     <meta charset="UTF-8">
     <title>QR-Test</title>
-    <script type="module">
-        import adapter from 'webrtc-adapter';
-    </script>
+<!--    <script type="module">-->
+<!--        import adapter from 'webrtc-adapter';-->
+<!--    </script>-->
 </head>
 <body>
     <div id="reader" style="width:300px;height:250px;">
@@ -34,6 +34,7 @@
     <script src="https://stackpath.bootstrapcdn.com/bootstrap/4.3.1/js/bootstrap.min.js" crossorigin="anonymous"></script>
 
 <!--    <script src="https://webrtc.github.io/adapter/adapter-latest.js"></script>-->
+    <script type="text/javascript"src="../node_modules/webrtc-adapter/out/adapter.js"></script>
     <script type="text/javascript" src="js/html5-qrcode.min.js"></script>
     <script type="text/javascript" src="js/jsqrcode-combined.min.js"></script>
 
