Einrichtung für https

--- a/oshealthrec-website/public/index.html
+++ b/oshealthrec-website/public/index.html
@@ -24,7 +24,7 @@
     </div>
     <div class="row justify-content-center">
         <div class="cell-sm-6">
-            <button class="btn btn-secondary mt-3" type="submit" onclick="window.location.href='http://34.67.49.75:3000/auth/github'"><img src="images/GitHub-Mark-32px.png" alt="Github Logo"> Mit Github anmelden</button>
+            <button class="btn btn-secondary mt-3" type="submit" onclick="window.location.href='https://34.67.49.75:3000/auth/github'"><img src="images/GitHub-Mark-32px.png" alt="Github Logo"> Mit Github anmelden</button>
         </div>
     </div>
 </div>
