--- a/oshealthrec-website/public/patient/dokumente.html
+++ b/oshealthrec-website/public/patient/dokumente.html
@@ -107,6 +107,10 @@
             window.location.href = "../index.html";
         }
 
+        // Initialisiere Firebase
+        let config = JSON.parse(firebaseConfig);
+        firebase.initializeApp(config);
+
         // Hole Tabelle als jquery Variable
         let reportTabelle = $('#reportTabelle');
 
