--- a/oshealthrec-website/public/qr-test.html
+++ b/oshealthrec-website/public/qr-test.html
@@ -48,8 +48,8 @@
             let scanner = new Instascan.Scanner({video: document.getElementById('preview')});
             scanner.addListener('scan', function (content) {
                 console.log(content);
-                approveDoctor(content).then(function () {
-                    scanner.stop();
+                scanner.stop().then(function (content) {
+                    approveDoctor(content);
                 });
             });
             Instascan.Camera.getCameras().then(function (cameras) {
