Scannen des QR-Codes eingefügt

--- a/oshealthrec-website/public/patient/freigaben.html
+++ b/oshealthrec-website/public/patient/freigaben.html
@@ -40,14 +40,30 @@
     </div>
 </nav>
 
-<div class="container">
+<div class="container-fluid">
     <div class="row">
         <div class="col-sm-12">
             <h3>Liste aller berechtigten Ärzte</h3>
         </div>
     </div>
     <div class="row">
-        <div class="col-sm-9">
+        <div class="col-sm-3">
+            <form class="form-group">
+                <button type="button" class="btn btn-primary btn-block freigaben-button"
+                        onclick="window.location.href='/patient/arzt-suche.html'">Arzt suchen
+                </button>
+            </form>
+        </div>
+        <div class="col-sm-3">
+            <form class="form-group">
+                <button type="button" class="btn btn-primary btn-block freigaben-button"
+                        onclick="window.location.href='/patient/scan-qr.html'">Arzt suchen
+                </button>
+            </form>
+        </div>
+    </div>
+    <div class="row">
+        <div class="col-sm-12">
             <table class="table table-hover mt-3">
                 <thead>
                 <tr>
@@ -62,13 +78,7 @@
                 </tbody>
             </table>
         </div>
-        <div class="col-sm-3">
-            <form class="form-group">
-                <button type="button" class="btn btn-primary btn-block freigaben-button"
-                        onclick="window.location.href='/patient/arzt-suche.html'">Arzt suchen
-                </button>
-            </form>
-        </div>
+
     </div>
 </div>
 
