--- a/oshealthrec-website/public/patient/freigaben.html
+++ b/oshealthrec-website/public/patient/freigaben.html
@@ -41,11 +41,7 @@
 </nav>
 
 <div class="container-fluid">
-    <div class="row">
-        <div class="col-sm-12">
-            <h3>Liste aller berechtigten Ärzte</h3>
-        </div>
-    </div>
+
     <div class="row">
         <div class="col-sm-3">
             <form class="form-group">
@@ -57,9 +53,14 @@
         <div class="col-sm-3">
             <form class="form-group">
                 <button type="button" class="btn btn-primary btn-block freigaben-button"
-                        onclick="window.location.href='/patient/scan-qr.html'">Arzt suchen
+                        onclick="window.location.href='/patient/scan-qr.html'">Freigabescan
                 </button>
             </form>
+        </div>
+    </div>
+    <div class="row">
+        <div class="col-sm-12">
+            <h3>Liste aller berechtigten Ärzte</h3>
         </div>
     </div>
     <div class="row">
