--- a/oshealthrec-website/public/patient/freigaben.html
+++ b/oshealthrec-website/public/patient/freigaben.html
@@ -41,27 +41,28 @@
 </nav>
 
 <div class="container-fluid">
-
     <div class="row">
+        <div class="col-sm-9">
+            <h3>Liste aller berechtigten Ärzte</h3>
+        </div>
         <div class="col-sm-3">
             <form class="form-group">
                 <button type="button" class="btn btn-primary btn-block freigaben-button"
                         onclick="window.location.href='/patient/arzt-suche.html'">Arzt suchen
                 </button>
-            </form>
-        </div>
-        <div class="col-sm-3">
-            <form class="form-group">
                 <button type="button" class="btn btn-primary btn-block freigaben-button"
                         onclick="window.location.href='/patient/scan-qr.html'">Freigabescan
                 </button>
             </form>
         </div>
+<!--        <div class="col-sm-3">-->
+<!--            <form class="form-group">-->
+<!--                -->
+<!--            </form>-->
+<!--        </div>-->
     </div>
     <div class="row">
-        <div class="col-sm-12">
-            <h3>Liste aller berechtigten Ärzte</h3>
-        </div>
+
     </div>
     <div class="row">
         <div class="col-sm-12">
