--- a/oshealthrec-website/public/patient/freigaben.html
+++ b/oshealthrec-website/public/patient/freigaben.html
@@ -43,7 +43,7 @@
 <div class="container-fluid">
     <div class="row">
         <div class="col-sm-6">
-            <h3>Liste aller berechtigten Ärzte</h3>
+            <h3 class="align-text-bottom">Liste aller berechtigten Ärzte</h3>
         </div>
         <div class="col-sm-3">
             <form class="form-group">
