--- a/oshealthrec-website/public/patient/freigaben.html
+++ b/oshealthrec-website/public/patient/freigaben.html
@@ -42,8 +42,8 @@
 
 <div class="container-fluid">
     <div class="row">
-        <div class="col-sm-6">
-            <h3 class="align-text-bottom">Liste aller berechtigten Ärzte</h3>
+        <div class="col-sm-6 align-text-bottom">
+            <h3>Liste aller berechtigten Ärzte</h3>
         </div>
         <div class="col-sm-3">
             <form class="form-group">
