--- a/oshealthrec-website/public/patient/freigaben.html
+++ b/oshealthrec-website/public/patient/freigaben.html
@@ -42,7 +42,7 @@
 
 <div class="container-fluid">
     <div class="row">
-        <div class="col-sm-6 align-text-bottom">
+        <div class="col-sm-6 sticky-bottom">
             <h3>Liste aller berechtigten Ärzte</h3>
         </div>
         <div class="col-sm-3">
