--- a/oshealthrec-website/public/patient/freigaben.html
+++ b/oshealthrec-website/public/patient/freigaben.html
@@ -41,8 +41,8 @@
 </nav>
 
 <div class="container-fluid">
-    <div class="row">
-        <div class="col-sm-6 align-bottom">
+    <div class="row align-bottom">
+        <div class="col-sm-6">
             <h3>Liste aller berechtigten Ärzte</h3>
         </div>
         <div class="col-sm-3">
