--- a/oshealthrec-website/public/patient/dokumente.html
+++ b/oshealthrec-website/public/patient/dokumente.html
@@ -40,7 +40,7 @@
     </div>
 </nav>
 
-<div class="container">
+<div class="container-fluid">
     <div class="row">
         <div class="col-sm-5">
             <form>
