--- a/oshealthrec-website/public/patient/arzt-suche.html
+++ b/oshealthrec-website/public/patient/arzt-suche.html
@@ -40,7 +40,7 @@
     </div>
 </nav>
 
-<div class="container">
+<div class="container-fluid">
     <div class="row">
         <div class="col-sm-12">
             <h3>Arztsuche</h3>
