--- a/oshealthrec-website/public/patient/scan-qr.html
+++ b/oshealthrec-website/public/patient/scan-qr.html
@@ -11,7 +11,7 @@
     <link rel="stylesheet" href="../public/css/oshealthrec.css">
 
     <title>OSHealthRec</title>
-    <script type="text/javascript" src="js/instascan.min.js"></script>
+    <script type="text/javascript" src="../js/instascan.min.js"></script>
 </head>
 <body>
 <nav class="navbar navbar-expand-lg navbar-light bg-light mb-3">
