--- a/oshealthrec-website/public/patient/scan-qr.html
+++ b/oshealthrec-website/public/patient/scan-qr.html
@@ -25,13 +25,13 @@
 
     <div class="collapse navbar-collapse" id="navbarSupportedContent">
         <ul class="navbar-nav mr-auto">
-            <li class="nav-item active ml-5">
+            <li class="nav-item ml-5">
                 <a class="nav-link" href="profil.html">Profil <span class="sr-only">(current)</span> </a>
             </li>
             <li class="nav-item ml-5">
                 <a class="nav-link" href="dokumente.html">Dokumente</a>
             </li>
-            <li class="nav-item ml-5">
+            <li class="nav-item ml-5 active">
                 <a class="nav-link" href="freigaben.html">Freigaben</a>
             </li>
         </ul>
