--- a/oshealthrec-website/public/patient/scan-qr.html
+++ b/oshealthrec-website/public/patient/scan-qr.html
@@ -55,13 +55,13 @@
 </nav>
 
 <div class="container">
-    <div class="row">
+    <div class="row d-flex align-items-center justify-content-center">
         <video id="preview"></video>
-        <div class="d-flex justify-content-center">
+<!--        <div class="d-flex align-items-center justify-content-center">-->
             <div class="spinner-border text-primary hidden" role="status" id="spinner">
                 <span class="sr-only">Loading...</span>
             </div>
-        </div>
+<!--        </div>-->
         <script type="text/javascript">
             let spinner = $('#spinner');
             let scanner = new Instascan.Scanner({video: document.getElementById('preview')});
