--- a/oshealthrec-website/public/patient/scan-qr.html
+++ b/oshealthrec-website/public/patient/scan-qr.html
@@ -55,10 +55,10 @@
 </nav>
 
 <div class="container">
-    <div class="row d-flex align-items-center justify-content-center">
+    <div class="row d-flex align-items-center">
         <video id="preview"></video>
 <!--        <div class="d-flex align-items-center justify-content-center">-->
-            <div class="spinner-border text-primary hidden" role="status" id="spinner">
+            <div class="spinner-border text-primary text-center hidden" role="status" id="spinner">
                 <span class="sr-only">Loading...</span>
             </div>
 <!--        </div>-->
