--- a/oshealthrec-website/public/patient/scan-qr.html
+++ b/oshealthrec-website/public/patient/scan-qr.html
@@ -54,7 +54,7 @@
     </div>
 </nav>
 
-<div class="container">
+<div class="container-fluid">
     <div class="row d-flex text-center align-items-center">
         <video id="preview"></video>
 <!--        <div class="d-flex align-items-center justify-content-center">-->
