--- a/oshealthrec-website/public/patient/scan-qr.html
+++ b/oshealthrec-website/public/patient/scan-qr.html
@@ -54,14 +54,14 @@
     </div>
 </nav>
 
-<div class="container-fluid">
-    <div class="row d-flex text-center align-items-center">
+<div class="container">
+    <div class="row d-flex">
         <video id="preview"></video>
-<!--        <div class="d-flex align-items-center justify-content-center">-->
+        <div class="d-flex align-items-center text-center">
             <div class="spinner-border text-primary hidden" role="status" id="spinner">
                 <span class="sr-only">Loading...</span>
             </div>
-<!--        </div>-->
+        </div>
         <script type="text/javascript">
             let spinner = $('#spinner');
             let scanner = new Instascan.Scanner({video: document.getElementById('preview')});
