--- a/oshealthrec-website/public/patient/scan-qr.html
+++ b/oshealthrec-website/public/patient/scan-qr.html
@@ -55,7 +55,7 @@
 </nav>
 
 <div class="container">
-    <div class="row d-flex">
+    <div class="row">
         <video id="preview"></video>
         <div class="d-flex align-items-center text-center">
             <div class="spinner-border text-primary hidden" role="status" id="spinner">
