--- a/oshealthrec-website/public/patient/scan-qr.html
+++ b/oshealthrec-website/public/patient/scan-qr.html
@@ -54,7 +54,7 @@
     </div>
 </nav>
 
-<div class="container">
+<div class="container-fluid">
     <div class="row">
         <video id="preview"></video>
         <div class="d-flex align-items-center text-center">
