--- a/oshealthrec-website/public/patient/scan-qr.html
+++ b/oshealthrec-website/public/patient/scan-qr.html
@@ -54,35 +54,37 @@
     </div>
 </nav>
 
-<div class="container-fluid">
+<div class="container">
     <div class="row">
-        <video id="preview"></video>
-        <div class="d-flex align-items-center text-center">
-            <div class="spinner-border text-primary hidden" role="status" id="spinner">
-                <span class="sr-only">Loading...</span>
+        <div class="col-12">
+            <video id="preview"></video>
+            <div class="d-flex align-items-center text-center">
+                <div class="spinner-border text-primary hidden" role="status" id="spinner">
+                    <span class="sr-only">Loading...</span>
+                </div>
             </div>
-        </div>
-        <script type="text/javascript">
-            let spinner = $('#spinner');
-            let scanner = new Instascan.Scanner({video: document.getElementById('preview')});
-            scanner.addListener('scan', function (content) {
-                console.log(content);
-                let drId = content;
-                scanner.stop().then(function () {
-                    spinner.removeClass('hidden');
-                    approveDoctor(drId);
+            <script type="text/javascript">
+                let spinner = $('#spinner');
+                let scanner = new Instascan.Scanner({video: document.getElementById('preview')});
+                scanner.addListener('scan', function (content) {
+                    console.log(content);
+                    let drId = content;
+                    scanner.stop().then(function () {
+                        spinner.removeClass('hidden');
+                        approveDoctor(drId);
+                    });
                 });
-            });
-            Instascan.Camera.getCameras().then(function (cameras) {
-                if (cameras.length > 0) {
-                    scanner.start(cameras[0]);
-                } else {
-                    console.error('No cameras found.');
-                }
-            }).catch(function (e) {
-                console.error(e);
-            });
-        </script>
+                Instascan.Camera.getCameras().then(function (cameras) {
+                    if (cameras.length > 0) {
+                        scanner.start(cameras[0]);
+                    } else {
+                        console.error('No cameras found.');
+                    }
+                }).catch(function (e) {
+                    console.error(e);
+                });
+            </script>
+        </div>
     </div>
 </div>
 
