--- a/oshealthrec-website/public/patient/scan-qr.html
+++ b/oshealthrec-website/public/patient/scan-qr.html
@@ -56,7 +56,7 @@
 
 <div class="container">
     <div class="row">
-        <div class="col-12">
+        <div class="col-sm-12">
             <video id="preview"></video>
             <div class="d-flex align-items-center text-center">
                 <div class="spinner-border text-primary hidden" role="status" id="spinner">
