--- a/oshealthrec-website/public/patient/scan-qr.html
+++ b/oshealthrec-website/public/patient/scan-qr.html
@@ -55,10 +55,10 @@
 </nav>
 
 <div class="container-fluid">
-    <div class="row">
-        <div class="col-sm-12">
+    <div class="row align-items-center">
+        <div class="col">
             <video id="preview"></video>
-            <div class="d-flex align-items-center text-center">
+            <div class="text-center">
                 <div class="spinner-border text-primary hidden" role="status" id="spinner">
                     <span class="sr-only">Loading...</span>
                 </div>
