--- a/oshealthrec-website/public/patient/profil.html
+++ b/oshealthrec-website/public/patient/profil.html
@@ -42,9 +42,11 @@
 
 <div class="container">
     <div class="row">
-        <div class="text-center">
-            <div class="spinner-border text-primary hidden" role="status" id="spinner">
-                <span class="sr-only">Loading...</span>
+        <div class="col-12">
+            <div class="text-center">
+                <div class="spinner-border text-primary" role="status" id="spinner">
+                    <span class="sr-only">Loading...</span>
+                </div>
             </div>
         </div>
     </div>
@@ -140,7 +142,7 @@
         blutgruppe.text(patientProfil.bloodType);
         notfallkontakt.text(patientProfil.emergency_contact);
 
-        spinner.removeClass('hidden');
+        spinner.addClass('hidden');
     });
 </script>
 </body>
