--- a/oshealthrec-website/public/patient/scan-qr.html
+++ b/oshealthrec-website/public/patient/scan-qr.html
@@ -58,7 +58,7 @@
     <div class="row">
         <div class="col-12">
             <div class="text-center">
-                <div class="spinner-border text-primary" role="status" id="spinner">
+                <div class="spinner-border text-primary hidden" role="status" id="spinner">
                     <span class="sr-only">Loading...</span>
                 </div>
             </div>
