--- a/oshealthrec-website/public/doktor/patienten.html
+++ b/oshealthrec-website/public/doktor/patienten.html
@@ -42,6 +42,15 @@
 
 <div class="container">
     <div class="row">
+        <div class="col-12">
+            <div class="text-center">
+                <div class="spinner-border text-primary" role="status" id="spinner">
+                    <span class="sr-only">Loading...</span>
+                </div>
+            </div>
+        </div>
+    </div>
+    <div class="row">
         <div class="col-sm-12">
             <h3>Patientensuche</h3>
         </div>
@@ -179,6 +188,9 @@
                 patientenTabelle.append(appendString);
             })
         }
+
+        let spinner = $('#spinner');
+        spinner.addClass('hidden');
 
         // Funktion um ganze Reihe einer Tabelle als Link klickbar zu machen
         $(".clickable-row").click(function () {
