--- a/oshealthrec-website/public/doktor/mitarbeiter.html
+++ b/oshealthrec-website/public/doktor/mitarbeiter.html
@@ -42,6 +42,15 @@
 
 <div class="container">
     <div class="row">
+        <div class="col-12">
+            <div class="text-center">
+                <div class="spinner-border text-primary" role="status" id="spinner">
+                    <span class="sr-only">Loading...</span>
+                </div>
+            </div>
+        </div>
+    </div>
+    <div class="row">
         <div class="col-sm-12">
             <h3>Liste aller berechtigten Mitarbeiter</h3>
         </div>
@@ -170,6 +179,9 @@
             })
 
         }
+
+        let spinner = $('#spinner');
+        spinner.addClass('hidden');
     });
 </script>
 </body>
