--- a/oshealthrec-website/public/doktor/patient.html
+++ b/oshealthrec-website/public/doktor/patient.html
@@ -42,6 +42,15 @@
 
 <div class="container-fluid">
     <div class="row">
+        <div class="col-12">
+            <div class="text-center">
+                <div class="spinner-border text-primary" role="status" id="spinner">
+                    <span class="sr-only">Loading...</span>
+                </div>
+            </div>
+        </div>
+    </div>
+    <div class="row">
         <div class="col-sm-4">
             <form>
                 <input type="text" class="form-control mb-2 mr-5" id="inputTitel" onkeyup="filterReportTable()"
@@ -222,6 +231,9 @@
 
             reportTabelle.append(appendString);
         });
+
+        let spinner = $('#spinner');
+        spinner.addClass('hidden');
     });
 </script>
 </body>
