--- a/oshealthrec-website/public/doktor/mitarbeiter-suche.html
+++ b/oshealthrec-website/public/doktor/mitarbeiter-suche.html
@@ -123,7 +123,7 @@
             let appendString = "<tr>" +
                 "<td>" + employee.givenname + " " + employee.surname + "</td>" +
                 "<td>" + employee.birthday + "</td>" +
-                "<td align='right'><button type=\"button\" class=\"btn btn-outline-primary btn-block button-table\" onclick='approveEmployee(\"" + employee.personID + "\")'>Hinzufügen</button></td>" +
+                "<td align='right'><button type=\"button\" class=\"btn btn-outline-primary btn-block\" onclick='approveEmployee(\"" + employee.personID + "\")'>Hinzufügen</button></td>" +
                 "</tr>";
 
             mitarbeiterTabelle.append(appendString);
