--- a/oshealthrec-website/public/doktor/mitarbeiter-suche.html
+++ b/oshealthrec-website/public/doktor/mitarbeiter-suche.html
@@ -72,7 +72,7 @@
                 <tr>
                     <th scope="col">Name</th>
                     <th scope="col">Geburtsdatum</th>
-                    <th scope="col"></th>
+                    <th scope="col-2"></th>
                 </tr>
                 </thead>
                 <tbody id="mitarbeiterTabelle">
