--- a/oshealthrec-website/public/doktor/mitarbeiter.html
+++ b/oshealthrec-website/public/doktor/mitarbeiter.html
@@ -51,8 +51,15 @@
         </div>
     </div>
     <div class="row">
-        <div class="col-sm-12">
+        <div class="col-sm-9 d-flex align-items-center">
             <h3>Liste aller berechtigten Mitarbeiter</h3>
+        </div>
+        <div class="col-sm-3">
+            <form class="form-group">
+                <button type="button" class="btn btn-primary btn-block freigaben-button"
+                        onclick="window.location.href='/doktor/mitarbeiter-suche.html'">Mitarbeiter suchen
+                </button>
+            </form>
         </div>
     </div>
     <div class="row">
@@ -68,13 +75,6 @@
                 <tbody id="mitarbeiterTabelle">
                 </tbody>
             </table>
-        </div>
-        <div class="col-sm-3">
-            <form class="form-group">
-                <button type="button" class="btn btn-primary btn-block freigaben-button"
-                        onclick="window.location.href='/doktor/mitarbeiter-suche.html'">Mitarbeiter suchen
-                </button>
-            </form>
         </div>
     </div>
 </div>
