--- a/oshealthrec-website/public/doktor/patienten.html
+++ b/oshealthrec-website/public/doktor/patienten.html
@@ -40,7 +40,7 @@
     </div>
 </nav>
 
-<div class="container">
+<div class="container-fluid">
     <div class="row">
         <div class="col-12">
             <div class="text-center">
@@ -66,7 +66,7 @@
         </div>
     </div>
     <div class="row">
-        <div class="col-sm-10">
+        <div class="col-sm-12">
             <table class="table table-hover mt-5">
                 <thead>
                 <tr>
