--- a/oshealthrec-website/public/doktor/patient.html
+++ b/oshealthrec-website/public/doktor/patient.html
@@ -51,16 +51,6 @@
         </div>
     </div>
     <div class="row">
-        <div class="col-sm-2">
-            <form class="form-group">
-                <button type="button" class="btn btn-primary btn-block freigaben-button"
-                        onclick="window.location.href='/doktor/hochladen.html'">Hochladen
-                </button>
-            </form>
-        </div>
-
-        <div class="col-1">
-        </div>
         <div class="col-5">
             <dl class="row">
                 <dt class="col-sm-4">Vorname</dt>
@@ -75,6 +65,9 @@
                 <dt class="col-sm-4">Geburtsdatum</dt>
                 <dd class="col-sm-8" id="geburtsdatum"></dd>
 
+                <dt class="col-sm-2">Intoleranzen</dt>
+                <dd class="col-sm-10" id="intoleranzen"></dd>
+
                 <dt class="col-sm-4">Blutgruppe</dt>
                 <dd class="col-sm-8" id="blutgruppe"></dd>
 
@@ -82,6 +75,15 @@
                 <dd class="col-sm-8" id="notfallkontakt"></dd>
             </dl>
         </div>
+        <div class="col-sm-2">
+            <form class="form-group">
+                <button type="button" class="btn btn-primary btn-block freigaben-button"
+                        onclick="window.location.href='/doktor/hochladen.html'">Hochladen
+                </button>
+            </form>
+        </div>
+    </div>
+    <div class="row">
         <div class="col-sm-4">
             <form>
                 <input type="text" class="form-control mb-2 mr-5" id="inputTitel" onkeyup="filterReportTable()"
@@ -162,15 +164,27 @@
         let nachname = $('#nachname');
         let geschlecht = $('#geschlecht');
         let geburtsdatum = $('#geburtsdatum');
+        let intoleranzen = $('#intoleranzen');
         let blutgruppe = $('#blutgruppe');
         let notfallkontakt = $('#notfallkontakt');
         let reportTabelle = $('#reportTabelle');
+
+        let intolerancesString = "";
+        let firstIntolerance = true;
+        patientProfil.intolerances.forEach(function (intolerance) {
+            if (!firstIntolerance) {
+                intolerancesString += ", ";
+                firstIntolerance = false;
+            }
+            intolerancesString += intolerance;
+        });
 
         // Setz Werte der Textfelder
         vorname.text(patient.givenname);
         nachname.text(patient.surname);
         geschlecht.text(patient.sex);
         geburtsdatum.text(patient.birthday);
+        intoleranzen.text(intolerancesString);
         blutgruppe.text(patient.bloodType);
         notfallkontakt.text(patient.emergency_contact);
 
