--- a/oshealthrec-website/public/doktor/patient.html
+++ b/oshealthrec-website/public/doktor/patient.html
@@ -51,7 +51,7 @@
         </div>
     </div>
     <div class="row">
-        <div class="col-5">
+        <div class="col-10">
             <dl class="row">
                 <dt class="col-sm-4">Vorname</dt>
                 <dd class="col-sm-8" id="vorname"></dd>
@@ -171,7 +171,7 @@
 
         let intolerancesString = "";
         let firstIntolerance = true;
-        patientProfil.intolerances.forEach(function (intolerance) {
+        patient.intolerances.forEach(function (intolerance) {
             if (!firstIntolerance) {
                 intolerancesString += ", ";
                 firstIntolerance = false;
