--- a/oshealthrec-website/public/doktor/qr-generator.html
+++ b/oshealthrec-website/public/doktor/qr-generator.html
@@ -44,6 +44,9 @@
 
 <div class="container">
     <div class="row">
+        <h3>QR-Code zur Freigabe für den Patienten</h3>
+    </div>
+    <div class="row">
         <div id="qrcode"></div>
         <script type="text/javascript">
             let participantId = sessionStorage.getItem('participantId');
