--- a/oshealthrec-website/public/doktor/qr-generator.html
+++ b/oshealthrec-website/public/doktor/qr-generator.html
@@ -44,7 +44,7 @@
 
 <div class="container">
     <div class="row">
-        <h3>QR-Code zur Freigabe für den Patienten</h3>
+        <h3 class="mb-5">QR-Code zur Freigabe für den Patienten</h3>
     </div>
     <div class="row">
         <div id="qrcode"></div>
