--- a/oshealthrec-website/public/mitarbeiter/profil.html
+++ b/oshealthrec-website/public/mitarbeiter/profil.html
@@ -40,6 +40,15 @@
 <div class="container">
     <div class="row">
         <div class="col-12">
+            <div class="text-center">
+                <div class="spinner-border text-primary" role="status" id="spinner">
+                    <span class="sr-only">Loading...</span>
+                </div>
+            </div>
+        </div>
+    </div>
+    <div class="row">
+        <div class="col-12">
             <dl class="row">
                 <dt class="col-sm-2">Vorname</dt>
                 <dd class="col-sm-10" id="vorname"></dd>
@@ -101,6 +110,9 @@
         nachname.text(mitarbeiterProfil.surname);
         geschlecht.text(mitarbeiterProfil.sex);
         geburtsdatum.text(mitarbeiterProfil.birthday);
+
+        let spinner = $('#spinner');
+        spinner.addClass('hidden');
     });
 </script>
 </body>
